Still plugging away at it

--- a/Allspice.client/src/assets/scss/_variables.scss
+++ b/Allspice.client/src/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
 $body-bg: #e5e5e5;
 $primary: #3ba5dc;
-$secondary: #8392ab;
-$success: #00f867;
+$secondary: #F0F4F2;
+$success: #219653;
 $info: #527360;
 $warning: #fbcf33;
 $danger: #ea0606;
